# Volatility-Model-GARCH

./: .env.example  .gitignore  Dockerfile  README.md  plan.md  pyproject.toml  test_duckdb.py  test_sprint3_demo.py
api/: __init__.py  main.py
btc_garch/: __init__.py
btc_garch/data/: __init__.py  ingest.py
dashboard/: __init__.py  app_backup.py  app_clean.py
data/: __init__.py  ingest.py
modeling/: __init__.py  garch.py  search.py
tests/: test_api_acceptance.py  test_data_ingestion.py  test_integration_acceptance.py  test_modeling_garch.py  test_modeling_search.py  test_package_acceptance.py
