[tool.poetry]
name = "btc-garch"
version = "0.1.0"
description = "Bitcoin volatility modeling using GARCH models"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "btc_garch" },
]

[tool.poetry.dependencies]
python = "^3.10"
arch = "^6.2.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
yfinance = "^0.2.0"
matplotlib = "^3.7.0"
plotly = "^5.17.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
duckdb = "^0.9.0"
pydantic = "^2.5.0"
mlflow = "^2.8.0"
optuna = "^3.4.0"
websockets = ">=10.4,<14.0"
streamlit = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
